--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
 
 spring.data.rest.base-path=/api
