--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/imgstrdb
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
